[update] fix on management of the process